# apertium-kaz-rus

./: .gitattributes  .gitignore  Makefile.am  NEWwords.txt  README  Useful notes  apertium-kaz-rus.kaz-rus.dix  apertium-kaz-rus.kaz-rus.lrx  apertium-kaz-rus.kaz-rus.t1x  apertium-kaz-rus.kaz-rus.t2x  apertium-kaz-rus.rus-kaz.lrx  apertium-kaz-rus.rus-kaz.t1x  apertium-kaz-rus.rus-kaz.t2x  apertium-kaz-rus.rus-kaz.t3x  apertium-kaz-rus.rus-kaz.t4x  configure.ac  cover-rus.sh  info.rkt  main.rkt  modes.xml  pending-tests-rus-kaz.sh  pending-tests.sh  regression-tests-rus-kaz.sh  regression-tests.sh  wiki-tests.sh
CORPUS/: afn-kaz-1550  afn-ru  akorda-kaz-12  akorda-rus  almaty-gov-kaz-150  almatygov-ru  bolashak-kaz-242  bolashak-ru  conscouncil-kaz-250  constcouncil-ru  dingov-kaz.tmx  dingov-rus.tmx  egov-kaz-130  egov-ru  election-kaz-660  election-ru-660  enu1-kaz.tmx  enu1-rus.tmx  government-kaz-235  government-ru  iak-kaz-125  iak-ru  inform-kaz-370  inform-rus  knb-kaz-1010  knb-ru  kyzmet-kaz.tmx  kyzmet-rus.tmx  minplan-kaz-734  minplan-ru  muftyat+kaz+500  muftyat-kaz-725  muftyat-ru  muuftyat+ru  nationalbank-kaz-530  nationalbank-ru  pravstat-kaz-130  pravstat-ru  primeminister-kaz-860  primeminister-ru  (+8 more)
dev/: README  Regression_tests.html  extract-rules-eng-kaz.sh  extract-rules-from-gf-alignments.sh  extract-rules.sh
dev/phrase-extraction/: ACKNOWLEDGEMENTS  AUTHORS  Makefile  Makefile.am  Makefile.in  README  apertium-transfer-tools-generalisation-1.0.pc  apertium-transfer-tools-generalisation-1.0.pc.in  autogen.sh  config.status  configure  configure.ac
dev/phrase-extraction/autom4te.cache/: output.0  requests  traces.0  traces.1
dev/phrase-extraction/src/: ATXReader.C  ATXReader.H  Alignment.C  Alignment.H  AlignmentTemplate.C  AlignmentTemplate.H  LexicalizedWords.C  LexicalizedWords.H  Makefile  Makefile.am  Makefile.in  PTXReader.C  PTXReader.H  SentenceAlignment.C  TablesCore.C  TransferRule.C  TransferRule.H  Utils.C  Utils.H  apertium-add-restrictions-to-sl  apertium-add-restrictions-to-sl.C  apertium-apply-biling  apertium-apply-biling.C  apertium-gen-transfer-from-aligment-templates  apertium-gen-transfer-from-aligment-templates.C  apertium-posttransfer  apertium-posttransfer.C  apertium-posttransfer.dtd  apertium-preprocess-corpus-transfer-at  apertium-switch-alignments  apertium-symmetrize-alignments  apertium-symmetrize-alignments.C  apertium-transfer-at.dtd  apertium-validate-posttransfer  apertium-validate-transfer-at  apertium-xtract-bilingual-phrases  apertium-xtract-bilingual-phrases-koehn-2003  apertium-xtract-bilingual-phrases-koehn-2003.C  apertium-xtract-bilingual-phrases.C  configure.H  (+9 more)
dev/phrase-extraction/src/.deps/: ATXReader.Po  Alignment.Po  AlignmentTemplate.Po  AlignmentTemplateGeneralizer.Po  AlignmentTemplateHandy.Po  LexicalizedWords.Po  PTXReader.Po  SentenceAlignment.Po  TablesCore.Po  TransferRule.Po  Utils.Po  apertium-add-restrictions-to-sl.Po  apertium-apply-biling.Po  apertium-gen-transfer-from-aligment-templates.Po  apertium-generalize-alignment-templates.Po  apertium-posttransfer.Po  apertium-symmetrize-alignments.Po  apertium-xtract-alignment-templates.Po  apertium-xtract-bilingual-phrases-koehn-2003.Po  apertium-xtract-bilingual-phrases.Po  zfstream.Po
dev/phrase-extraction/transfer-tools-scripts/: Makefile  alignmentsToBeamSearchInput.sh  apertium-br-fr.transfer-at.br-fr.atx  apertium-ca-es.posttransfer.ptx  apertium-en-es.posttransfer.ptx  apertium-en-es.transfer-at.en-es.atx  apertium-en-es.transfer-at.es-en.atx  apertium-en-fr.posttransfer.ptx  apertium-es-ca.transfer-at.ca-es.atx  apertium-es-ca.transfer-at.es-ca.atx  apertium-xtract-bilingual-phrases-wrapper.sh  apertium-zho-spa.posttransfer.ptx  countTimesAttributeChanges.sh  extract-phrases-v3.sh  filter_alignment_templates.awk  generateCorpusFromBildic.sh  gfBiphrasesToTransferToolsFormat.sh  lemmatizeCorpus.sh  linkToWorkDir.sh  markers  preprocess_ca.sh  preprocess_ca_es-ca.sh  preprocess_en_es-en.sh  preprocess_es_ca-es.sh  preprocess_es_es-ca.sh  preprocess_fr_en-fr.sh  preprocess_fr_fr-en.sh  processBilphrases.sh  processBilphrasesFromGF.sh  trainGIZA++.sh
devel/: adjec1.awk  adjec2.awk  adjec3.awk  adjectives.csv  noun.awk
test/: kaz-rus-pending-biltrans-expected.txt  kaz-rus-pending-chunker-expected.txt  kaz-rus-pending-disam-expected.txt  kaz-rus-pending-generator-expected.txt  kaz-rus-pending-input.txt  kaz-rus-pending-interchunk-expected.txt  kaz-rus-pending-lex-expected.txt  kaz-rus-pending-morph-expected.txt  kaz-rus-pending-postchunk-expected.txt  kaz-rus-pending-postgen-expected.txt  kaz-rus-pending-postgen-gold.txt  kaz-rus-pending-pretransfer-expected.txt  kaz-rus-regression-disam-expected.txt  kaz-rus-regression-generator-expected.txt  kaz-rus-regression-input.txt  kaz-rus-regression-interchunk-expected.txt  kaz-rus-regression-lex-expected.txt  kaz-rus-regression-morph-expected.txt  kaz-rus-regression-postchunk-expected.txt  kaz-rus-regression-postgen-expected.txt  kaz-rus-regression-postgen-gold.txt  kaz-rus-regression-pretransfer-expected.txt  rus-kaz-pending-biltrans-expected.txt  rus-kaz-pending-chunker-expected.txt  rus-kaz-pending-chunker2-expected.txt  rus-kaz-pending-disam-expected.txt  rus-kaz-pending-generator-expected.txt  rus-kaz-pending-generator-gold.txt  rus-kaz-pending-input.txt  rus-kaz-pending-interchunk-expected.txt  rus-kaz-pending-morph-expected.txt  rus-kaz-pending-postchunk-expected.txt  rus-kaz-regression-biltrans-expected.txt  rus-kaz-regression-chunker-expected.txt  rus-kaz-regression-chunker2-expected.txt  rus-kaz-regression-generator-expected.txt  rus-kaz-regression-generator-gold.txt  rus-kaz-regression-input.txt  rus-kaz-regression-interchunk-expected.txt  rus-kaz-regression-lex-expected.txt  (+4 more)
testvoc/: README  inconsistency1.sh  testvoc-summary.rus-kaz.txt  testvoc1.sh
texts/: Kazakhstan.kaz.txt  Kazakhstan.rus.txt  rus.txt  text-kaz1.txt  text-kaz2.txt  text-kaz3.txt  text-kaz4.txt  text-kaz5.txt  text-rus1.txt  text-rus2.txt  text-rus3.txt  text-rus4.txt  text-rus5.txt  texts.kaz  texts.rus
(+110 files in other folders)
