

SUBDIRS = src
DIST_SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = apertium-transfer-tools-generalisation-$(GENERIC_RELEASE).pc

EXTRA_DIST=autogen.sh example/apertium-es-pt.posttransfer.ptx \
example/filter_alignment_templates.awk example/preprocess_es_es-pt.sh \
example/preprocess_pt_pt-es.sh \
example/apertium-es-pt.transfer-at.es-pt.atx  example/Makefile \
example/preprocess_es_pt-es.sh  example/README \
example/apertium-es-pt.transfer-at.pt-es.atx \
example/modes.xml example/preprocess_pt_es-pt.sh \
example/train-giza++-pt-es/LR/NOTHING example/train-giza++-pt-es/RL/NOTHING \
example/train-giza++-es-pt/LR/NOTHING example/train-giza++-es-pt/RL/NOTHING \
ACKNOWLEDGEMENTS
